--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FrontL2i</title>
+  <title>L2i Books</title>
   <base href="/">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="L2i E_commerce for 2itech with Angular and TailwindCSS  >
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/tailwindcss@3.2.4/dist/tailwind.min.css"/>
+
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
