--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/tailwindcss@3.2.4/dist/tailwind.min.css"/>
+  <!-- <link rel="stylesheet" href="https://unpkg.com/tailwindcss@3.2.4/dist/tailwind.min.css"/> -->
 </head>
 <body class="bg-white text-gray-600 work-sans leading-normal text-base tracking-normal">
   <app-root></app-root>
