--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
   <meta charset="utf-8">
   <title>L2i Books</title>
   <base href="/">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="L2i E_commerce for 2itech with Angular and TailwindCSS"  >
-  <meta name="keywords" content="e_commerce angular13, tailwind3.2.4, TailwindCSS"  >
+  <meta name="keywords" content="e_commerce angular13, Meilisearch, material angular, tailwind3.2.4, TailwindCSS"  >
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
